--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello It's</h1>
-        <h2>Priyansh</h2>
+        <div>
+            <h1>Hello It's</h1>
+        </div>
+        <div>
+            <h2>Priyansh</h2>
+        </div>  
     </div>
     <div class="footer">
         <div>
