--- a/index.html
+++ b/index.html
@@ -5,26 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Six+Caps&display=swap" rel="stylesheet">
     <title>Welcome</title>
 </head>
 <body>
     <div class="container">
         <div>
-            <h1>Hello It's</h1>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#project">Projects</a></li>
+                <li><a href="#clients">Clients</a></li>
+                <li><a href="#Inspiration">Inspiration</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
         <div>
-            <h2>Priyansh</h2>
+            <h2 class="nameStyle">Priyansh</h2>
         </div>  
     </div>
+
     <div class="footer">
         <div>
+            <h4 class="nameStyle">kumar</h4>
+        </div>
+        <div> 
             <a href="#fb"><img src="images/facebook.svg" alt="facebook icon"></a>
             <a href="#insta"><img src="images/instagram.svg" alt="instagram icon"></a>
             <a href="#twitter"><img src="images/twitter.svg" alt="twitter icon"></a>
             <a href="#youtube"><img src="images/youtube.svg" alt="youtube icon"></a>
-        </div>
-        <div>
-            <h4>Shiraj Priyansh &copy; 2021</h4>
         </div>
     </div>
 </body>
