--- a/project.html
+++ b/project.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Priyansh Kumar">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="aboutStyle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Six+Caps&display=swap" rel="stylesheet">
     <title>About</title>
 </head>
 <body>
@@ -24,12 +23,12 @@
             </ul>
         </div>
     </div>
-    <div class="section">
-        <h2 class="nameStyle">Priyansh</h2>
+    <div class="section section-font">
+        <p>Piano Bajaao</p>
     </div>
     <div class="footer">
-        <div>
-            <h4 class="nameStyle">kumar</h4>
+        <div class="section-font">
+            <h4>More on going...</h4>
         </div>
         <div> 
             <a href="#fb"><img src="images/facebook.svg" alt="facebook icon"></a>
