--- a/clients.html
+++ b/clients.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="aboutStyle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <title>About</title>
+    <title>Clients</title>
 </head>
 <body>
     <div class="container">
