--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Six+Caps&display=swap" rel="stylesheet">
-    <title>About</title>
+    <title>Home</title>
 </head>
 <body>
     <div class="container">
