--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     </div>
     <div class="footer">
         <div class="section-font">
-            <h4>kumar</h4>
+            <h4>Thank You</h4>
         </div>
         <div> 
             <a href="#fb"><img src="images/facebook.svg" alt="facebook icon"></a>
