made more responsive
added vh to all elements to make it more responsive.

--- a/about.html
+++ b/about.html
@@ -23,12 +23,12 @@
             </ul>
         </div>
     </div>
-    <div class="section section-font">
-        <p>I'm a web & software developer from Meerut, UP.</p>
+    <div class="section">
+        <p class="section-font">I'm a web &amp; software developer from Meerut, UP.</p>
     </div>
     <div class="footer">
-        <div class="section-font">
-            <h4>India</h4>
+        <div>
+            <h4 class="section-font">India</h4>
         </div>
         <div> 
             <a href="#fb"><img src="images/facebook.svg" alt="facebook icon"></a>
