--- a/clients.html
+++ b/clients.html
@@ -23,12 +23,12 @@
             </ul>
         </div>
     </div>
-    <div class="section section-font">
-        <p>-----Feedback-----</p>
+    <div class="section">
+        <p class="section-font">-----Feedback-----</p>
     </div>
     <div class="footer">
-        <div class="section-font">
-            <h4>-pianobajaao.com</h4>
+        <div>
+            <h4 class="section-font">-pianobajaao.com</h4>
         </div>
         <div> 
             <a href="#fb"><img src="images/facebook.svg" alt="facebook icon"></a>
