--- a/contact.html
+++ b/contact.html
@@ -23,12 +23,12 @@
             </ul>
         </div>
     </div>
-    <div class="section section-font">
-        <p>priyansh_shiraj@outlook.com</p>
+    <div class="section">
+        <p class="section-font">priyansh_shiraj@outlook.com</p>
     </div>
     <div class="footer">
-        <div class="section-font">
-            <h4>Thank You</h4>
+        <div>
+            <h4 class="section-font">Thank You</h4>
         </div>
         <div> 
             <a href="#fb"><img src="images/facebook.svg" alt="facebook icon"></a>
