--- a/inspiration.html
+++ b/inspiration.html
@@ -23,12 +23,12 @@
             </ul>
         </div>
     </div>
-    <div class="section section-font">
-        <p>By believing Passionately in something that still does not exist, we create it.</p>
+    <div class="section">
+        <p class="section-font">By believing Passionately in something that still does not exist, we create it.</p>
     </div>
     <div class="footer">
-        <div class="section-font">
-            <h4>-Franz Kafka</h4>
+        <div>
+            <h4 class="section-font">-Franz Kafka</h4>
         </div>
         <div> 
             <a href="#fb"><img src="images/facebook.svg" alt="facebook icon"></a>
