--- a/project.html
+++ b/project.html
@@ -23,12 +23,12 @@
             </ul>
         </div>
     </div>
-    <div class="section section-font">
-        <p>Piano Bajaao</p>
+    <div class="section">
+        <p class="section-font">Piano Bajaao</p>
     </div>
     <div class="footer">
-        <div class="section-font">
-            <h4>More on going...</h4>
+        <div>
+            <h4 class="section-font">More on going...</h4>
         </div>
         <div> 
             <a href="#fb"><img src="images/facebook.svg" alt="facebook icon"></a>
